--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet"/>
 
-        <link rel="stylesheet" href="./src/css/reset.css">
-        <link rel="stylesheet" href="./src/css/estilos.css">
-        <link rel="stylesheet" href="./src/css/responsive.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/responsive.css">
+        <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
     <header class="cabecalho">
