--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <button class="btn-filtrar">Aplicar filtros</button>
         </div>
         <ul class="cartas">
-            <li class="carta-arkanon" data-categoria="epica" data-preco="3000">
-                <img src="./imagens/carta-arkanon.png" alt="carta Arkanon">
+            <li class="cartaArkanon" data-categoria="epica" data-preco="3000">
+                <img class="carta-arkanon" src="./imagens/carta-arkanon.png" alt="carta Arkanon">
                 <div class="informacoes" data-id="Arkanon">
                     <h2 class="nome-personagem">Arkanon</h2>
                     <span class="categoria">Categoria: Épica</span>
@@ -45,8 +45,8 @@
                     <button class="btn-comprar">Comprar</button>
                 </div>
             </li>
-            <li class="carta-drahven" data-categoria="comum" data-preco="600">
-                <img src="./imagens/carta-drahven.png" alt="carta Drahven">
+            <li class="cartaDrahven" data-categoria="comum" data-preco="600">
+                <img class="carta-drahven" src="./imagens/carta-drahven.png" alt="carta Drahven">
                 <div class="informacoes" data-id="Drahven">
                     <h2 class="nome-personagem">Drahven</h2>
                     <span class="categoria">Categoria: Comum</span>
@@ -54,8 +54,8 @@
                     <button class="btn-comprar">Comprar</button>
                 </div>
             </li>
-            <li class="carta-kaelthar" data-categoria="comum" data-preco="800">
-                <img src="./imagens/carta-kaelthar.png" alt="carta Kaelthar">
+            <li class="cartaKaelthar" data-categoria="comum" data-preco="800">
+                <img class="carta-kaelthar" src="./imagens/carta-kaelthar.png" alt="carta Kaelthar">
                 <div class="informacoes" data-id="Kaelthar">
                     <h2 class="nome-personagem">Kaelthar</h2>
                     <span class="categoria">Categoria: Comum</span>
@@ -63,8 +63,8 @@
                     <button class="btn-comprar">Comprar</button>
                 </div>
             </li>
-            <li class="carta-lymara" data-categoria="epica" data-preco="4000">
-                <img src="./imagens/carta-lymara.png" alt="carta Lymara">
+            <li class="cartaLymara" data-categoria="epica" data-preco="4000">
+                <img class="carta-lymara" src="./imagens/carta-lymara.png" alt="carta Lymara">
                 <div class="informacoes" data-id="Lymara">
                     <h2 class="nome-personagem">Lymara</h2>
                     <span class="categoria">Categoria: Épica</span>
@@ -72,8 +72,8 @@
                     <button class="btn-comprar">Comprar</button>
                 </div>
             </li>
-            <li class="carta-maldrik" data-categoria="rara" data-preco="1500">
-                <img src="./imagens/carta-maldrik.png" alt="carta Maldrik">
+            <li class="cartaMaldrik" data-categoria="rara" data-preco="1500">
+                <img class="carta-maldrik" src="./imagens/carta-maldrik.png" alt="carta Maldrik">
                 <div class="informacoes" data-id="Maldrik">
                     <h2 class="nome-personagem">Maldrik</h2>
                     <span class="categoria">Categoria: Rara</span>
@@ -81,8 +81,8 @@
                     <button class="btn-comprar">Comprar</button>
                 </div>
             </li>
-            <li class="carta-nyxsombra" data-categoria="comum" data-preco="400">
-                <img src="./imagens/carta-nyxsombra.png" alt="carta Nyxsombra">
+            <li class="cartaNyxsombra" data-categoria="comum" data-preco="400">
+                <img class="carta-nyxsombra" src="./imagens/carta-nyxsombra.png" alt="carta Nyxsombra">
                 <div class="informacoes" data-id="Nyxsombra">
                     <h2 class="nome-personagem">Nyxsombra</h2>
                     <span class="categoria">Categoria: Comum</span>
